--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 </head>
 <body>
     <main>
-        <header class="header">
+        <header class="header-fixed">
             <div class="content">
                 <nav class="navbar">
                     <!-- Logo -->
-                    <img src="./assets/img/Logo.svg" alt="Besnik.">
+                    <a href="#!"><img src="./assets/img/Logo.svg" alt="Besnik."></a>
                     <!-- Navigation -->
                     <ul>
                         <li><a href="#!">Home</a></li>
@@ -32,6 +32,11 @@
                         <a href="#!" class="btn actions_btn">Sign up</a>
                     </div>
                 </nav>
+            </div>
+        </header>
+        <div class="hero-wrapped">
+            <div class="content">
+
 
                 <!-- Hero -->
                 <div class="hero">
@@ -47,7 +52,7 @@
                     <img src="./assets/img/house illustration.svg" alt="Discover a place you'll love to live." class="hero__img">
                 </div>
             </div>
-        </header>
+        </div>
 
         <div class="clients">
             <div class="content">
